testdata/baselines/reference/compiler/tluaVarargParenAmbiguity.errors.txt
tluaVarargParenAmbiguity.tlua(12,16): error TLUA2695: Left side of comma operator is unused and has no side effects.
tluaVarargParenAmbiguity.tlua(23,27): error TLUA1014: A rest parameter must be last in a parameter list.


==== tluaVarargParenAmbiguity.tlua (2 errors) ====
    // `(...` is ambiguous between an arrow parameter list, the Lua single-value
    // truncation idiom `(...)`, and `...` as an operand inside parentheses. The
    // arrow lookahead must not commit where the expression reading is the legal
    // one: committing turns legal code into a parse error, and a parse error
    // suppresses every semantic diagnostic in the program. The main chunk is a
    // vararg function, so a top-level `...` is legal throughout.
    
    declare n: number;
    
    // A parenthesized expression list is an expression, with or without a vararg
    // inside it.
    local plain = (1, 2);
                   ~
!!! error TLUA2695: Left side of comma operator is unused and has no side effects.
    local withVararg = (..., 2);
    
    // Still arrows: a bare vararg parameter list, one with the (ambiguous) return
    // type colon, and an annotated vararg.
    local arrow = (...) => 1;
    local arrowWithReturnType = (...): number => 2;
    local arrowAnnotated = (...: string) => 3;
    
    // A misplaced vararg is still an arrow when the `=>` says so -- the parameter
    // grammar reports it precisely (a rest parameter must be last).
    local misplacedInArrow = (..., x: number) => x;
                              ~~~
!!! error TLUA1014: A rest parameter must be last in a parameter list.
    
    // Without the `=>` the same shape is an expression list, not a mangled arrow.
    local notAnArrow = (..., n);
    